--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - backend-cache
   pull_request:
     branches:
       - main
+      - backend-cache
 
 jobs:
   test:
