--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.21.0",
     "@jest/globals": "^29.7.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
@@ -41,6 +42,7 @@
     "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.4.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
