--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: Backend CI Pipeline
 on:
   push:
     branches:
-      - main
+      - backend-cache
   pull_request:
     branches:
-      - main
+      - backend-cache
 
 jobs:
   test:
