--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config ./jest/jest.config.js"
   },
   "keywords": [],
   "author": "",
