--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config ./jest/jest.config.js"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +41,7 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.4.1",
+    "@upstash/redis": "^1.34.6",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
@@ -49,6 +50,7 @@
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.6",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "uuid": "^11.1.0",
