--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
     "test": "jest --config ./jest/jest.config.js"
   },
   "keywords": [],
@@ -27,6 +32,7 @@
     "eslint-plugin-jest": "^28.11.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "jsonc-parser": "^3.3.1",
     "prisma": "^6.4.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
@@ -48,7 +54,7 @@
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mime": "^4.0.6",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "tsconfig-paths": "^4.2.0",
