New docker config
Agora ta ficando no jeito, decobri os erros e removi as gambi

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,9 +10,8 @@ COPY package*.json ./
 COPY tsconfig.json ./
 COPY prisma ./prisma/
 
-# Install dependencies with explicit mime version
-RUN npm install mime@3.0.0 --save-exact && \
-    npm ci --prefer-offline
+# Install dependencies
+RUN npm ci --prefer-offline
 
 # Copy source code
 COPY . .
@@ -23,25 +22,11 @@ RUN npm run prisma:generate
 # Build the application
 RUN npx tsc --skipLibCheck
 
-# Create a simple path alias module (with explicit paths)
-RUN echo "const tsConfigPaths = require('tsconfig-paths');" > module-alias.js && \
-    echo "console.log('Registering TypeScript path aliases...');" >> module-alias.js && \
-    echo "tsConfigPaths.register({" >> module-alias.js && \
-    echo "  baseUrl: '/api/dist'," >> module-alias.js && \
-    echo "  paths: {" >> module-alias.js && \
-    echo "    '@modules/*': ['/api/dist/modules/*']," >> module-alias.js && \
-    echo "    '@shared/*': ['/api/dist/shared/*']," >> module-alias.js && \
-    echo "    '@config/*': ['/api/dist/config/*']," >> module-alias.js && \
-    echo "    '@middlewares/*': ['/api/dist/middlewares/*']," >> module-alias.js && \
-    echo "    '@routeParams/*': ['/api/dist/routeParams/*']" >> module-alias.js && \
-    echo "  }" >> module-alias.js && \
-    echo "});" >> module-alias.js
-
 # Set production environment
 ENV NODE_ENV=production
 
 # Expose application port
 EXPOSE 3333
 
-# Start the application with path resolution
-CMD ["node", "--no-warnings", "-r", "./module-alias.js", "dist/server.js"]
+# Start the application with esm
+CMD ["node", "-r", "module-alias/register", "dist/server.js"]
