--- a/backend/package.json
+++ b/backend/package.json
@@ -54,12 +54,20 @@
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mime": "^3.0.0",
+    "mime": "^4.0.6",
+    "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
+  },
+  "_moduleAliases": {
+    "@modules": "dist/modules",
+    "@shared": "dist/shared",
+    "@config": "dist/config",
+    "@middlewares": "dist/middlewares",
+    "@routeParams": "dist/routeParams"
   }
 }
